--- a/ton-client-utils/Cargo.toml
+++ b/ton-client-utils/Cargo.toml
@@ -7,3 +7,7 @@ authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
 [dependencies]
 thiserror = { workspace = true }
 itertools = { workspace = true }
+tracing = { workspace = true }
+tokio = { workspace = true }
+tokio-util = { workspace = true }
+
