--- a/ton-liteserver-client/Cargo.toml
+++ b/ton-liteserver-client/Cargo.toml
@@ -13,6 +13,7 @@ convert_case = "0.6.0"
 
 [dependencies]
 adnl-tcp = { path = "../adnl-tcp", features = ["client"] }
+ton-client-utils = { path = "../ton-client-utils" }
 toner.workspace = true
 anyhow = { workspace = true }
 tokio = { workspace = true }
