--- a/ton-client-util/Cargo.toml
+++ b/ton-client-util/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ton-client-utils"
+name = "ton-client-util"
 version = "0.1.0"
 edition = "2021"
 authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
