--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
 
 [dependencies]
 tonlibjson-sys = { path = "../tonlibjson-sys" }
-ton-client-utils = { path = "../ton-client-utils" }
+ton-client-util = { path = "../ton-client-util" }
 tower = { workspace = true }
 tokio = { workspace = true }
 anyhow = { workspace = true }
