shard id into prefix

--- a/ton-client-util/Cargo.toml
+++ b/ton-client-util/Cargo.toml
@@ -10,4 +10,4 @@ itertools = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
 tokio-util = { workspace = true }
-
+bitvec = "1.0.1"
