--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,16 +13,16 @@ members = [
 ]
 
 [workspace.dependencies]
-anyhow = { version = "1.0", features = ["backtrace"]}
+anyhow = { version = "1.0", features = ["backtrace"] }
 async-trait = "0.1"
 tower = { version = "0.4", features = ["full"] }
 tokio = { version = "1.38", features = ["full"] }
 tokio-util = { version = "0.7", features = ["codec"] }
-tokio-stream = { version = "0.1", features = ["sync"]}
+tokio-stream = { version = "0.1", features = ["sync"] }
 futures = "0.3"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-tracing-futures = { version = "0.2.5", features = ["std", "std-future", "futures-03"]}
+tracing-futures = { version = "0.2.5", features = ["std", "std-future", "futures-03"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["serde_derive"] }
 base64 = "0.22"
@@ -47,3 +47,5 @@ rand = "0.8"
 bytes = "1.6"
 thiserror = "1.0.61"
 itertools = "0.13"
+bitvec = "1.0.1"
+metrics = "0.23.0"
