--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -12,7 +12,7 @@ tokio = { workspace = true }
 anyhow = { workspace = true }
 futures = { workspace = true }
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true}
+tracing-subscriber = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio-stream = { workspace = true }
@@ -31,10 +31,10 @@ thiserror = { workspace = true }
 reqwest = { version = "0.12.5", features = ["rustls-tls", "hickory-dns"], default-features = false }
 hickory-resolver = { version = "0.24.1", features = ["tokio-runtime"] }
 itertools = { workspace = true }
+metrics = { workspace = true }
 derive-new = "0.6.0"
 tokio-retry = "0.3"
 crc = "3.2.1"
-metrics = "0.23.0"
 
 [dev-dependencies]
 tracing-test = { workspace = true }
