--- a/ton-liteserver-client/Cargo.toml
+++ b/ton-liteserver-client/Cargo.toml
@@ -27,6 +27,7 @@ thiserror = { workspace = true }
 futures = { workspace = true }
 tokio-stream = { workspace = true }
 dashmap = { workspace = true }
+url = "2.5.1"
 
 [dev-dependencies]
 hex = { workspace = true }
