--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,3 +49,5 @@ thiserror = "1.0.61"
 itertools = "0.13"
 bitvec = "1.0.1"
 metrics = "0.23.0"
+reqwest = { version = "0.12.4", features = ["rustls-tls", "hickory-dns"], default-features = false }
+hickory-resolver = { version = "0.24.1", features = ["tokio-runtime"] }
