--- a/ton-client-util/Cargo.toml
+++ b/ton-client-util/Cargo.toml
@@ -10,7 +10,13 @@ itertools = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
 tokio-util = { workspace = true }
+futures = { workspace = true }
 bitvec = { workspace = true }
 tower = { workspace = true }
 metrics = { workspace = true }
 pin-project = { workspace = true }
+anyhow = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+reqwest = { workspace = true }
+hickory-resolver = { workspace = true }
