--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -28,8 +28,8 @@ pin-project = { workspace = true }
 rand = { workspace = true }
 bytes = { workspace = true }
 thiserror = { workspace = true }
-reqwest = { version = "0.12.5", features = ["rustls-tls", "hickory-dns"], default-features = false }
-hickory-resolver = { version = "0.24.1", features = ["tokio-runtime"] }
+reqwest = { workspace = true }
+hickory-resolver = { workspace = true }
 itertools = { workspace = true }
 metrics = { workspace = true }
 derive-new = "0.6.0"
