--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,3 +51,4 @@ bitvec = "1.0.1"
 metrics = "0.23.0"
 reqwest = { version = "0.12.4", features = ["rustls-tls", "hickory-dns"], default-features = false }
 hickory-resolver = { version = "0.24.1", features = ["tokio-runtime"] }
+tokio-retry = "0.3"
