--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -32,8 +32,8 @@ reqwest = { workspace = true }
 hickory-resolver = { workspace = true }
 itertools = { workspace = true }
 metrics = { workspace = true }
+tokio-retry = { workspace = true }
 derive-new = "0.6.0"
-tokio-retry = "0.3"
 crc = "3.2.1"
 
 [dev-dependencies]
