--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -6,13 +6,13 @@ authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
 
 [dependencies]
 tonlibjson-sys = { path = "../tonlibjson-sys" }
-ton-client-utils = { path = "../ton-client-utils" }
+ton-client-util = { path = "../ton-client-util" }
 tower = { workspace = true }
 tokio = { workspace = true }
 anyhow = { workspace = true }
 futures = { workspace = true }
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true}
+tracing-subscriber = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio-stream = { workspace = true }
@@ -28,13 +28,13 @@ pin-project = { workspace = true }
 rand = { workspace = true }
 bytes = { workspace = true }
 thiserror = { workspace = true }
-reqwest = { version = "0.12.5", features = ["rustls-tls", "hickory-dns"], default-features = false }
-hickory-resolver = { version = "0.24.1", features = ["tokio-runtime"] }
+reqwest = { workspace = true }
+hickory-resolver = { workspace = true }
 itertools = { workspace = true }
+metrics = { workspace = true }
+tokio-retry = { workspace = true }
 derive-new = "0.6.0"
-tokio-retry = "0.3"
 crc = "3.2.1"
-metrics = "0.23.0"
 
 [dev-dependencies]
 tracing-test = { workspace = true }
