--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -30,10 +30,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - uses: awalsh128/cache-apt-pkgs-action@latest
+      - uses: ./.github/actions/prepare
         if: runner.os == 'Linux'
         with:
-          packages: libsecp256k1-dev libsodium-dev liblz4-dev
+          token: ${{ secrets.GITHUB_TOKEN }}
+#      - uses: awalsh128/cache-apt-pkgs-action@latest
+#        if: runner.os == 'Linux'
+#        with:
+#          packages: libsecp256k1-dev libsodium-dev liblz4-dev
       - uses: arduino/setup-protoc@v3
         if: runner.os == 'Linux'
       - run: brew install secp256k1 libsodium lz4 protobuf
