--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -27,15 +27,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - uses: awalsh128/cache-apt-pkgs-action@latest
+      - uses: ./.github/actions/prepare
         with:
-          packages: libsecp256k1-dev libsodium-dev liblz4-dev
-      - uses: arduino/setup-protoc@v3
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: x86_64-unknown-linux-gnu
-      - name: Run sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.6
+          token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions-rs/clippy-check@v1
         env:
           CARGO_INCREMENTAL: "0"
