--- a/.github/actions/prepare/action.yml
+++ b/.github/actions/prepare/action.yml
@@ -16,13 +16,15 @@ runs:
       run: |
         LLVM_VERSION=$(rustc --verbose --version | grep -Po 'LLVM version: \K\d+\.\d+.\d+')
         LLVM_MAJOR_VERSION=$(rustc --verbose --version | grep -Po 'LLVM version: \K\d+')
+        UBUNTU_VERSION=$(lsb_release -a | grep -Po 'Codename:\t\K\w+')
         echo "LLVM_VERSION=$LLVM_VERSION" >> $GITHUB_OUTPUT
         echo "LLVM_MAJOR_VERSION=$LLVM_MAJOR_VERSION" >> $GITHUB_OUTPUT
+        echo "UBUNTU_VERSION=$UBUNTU_VERSION" >> $GITHUB_OUTPUT
     - name: Install LLVM and Clang
       shell: bash
       run: |
         wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-        sudo add-apt-repository "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-${{ steps.llvm_setup.outputs.LLVM_MAJOR_VERSION }} main"
+        sudo add-apt-repository "deb http://apt.llvm.org/${{ steps.llvm_setup.outputs.UBUNTU_VERSION }}/ llvm-toolchain-${{ steps.llvm_setup.outputs.UBUNTU_VERSION }}-${{ steps.llvm_setup.outputs.LLVM_MAJOR_VERSION }} main"
         sudo apt-get update
         sudo apt-get install --yes libsecp256k1-dev libsodium-dev liblz4-dev clang-${{ steps.llvm_setup.outputs.LLVM_MAJOR_VERSION }} lldb-${{ steps.llvm_setup.outputs.LLVM_MAJOR_VERSION }} lld-${{ steps.llvm_setup.outputs.LLVM_MAJOR_VERSION }} libc++-${{ steps.llvm_setup.outputs.LLVM_MAJOR_VERSION }}-dev libc++abi-${{ steps.llvm_setup.outputs.LLVM_MAJOR_VERSION }}-dev libunwind-${{ steps.llvm_setup.outputs.LLVM_MAJOR_VERSION }}-dev
     - uses: arduino/setup-protoc@v2
