--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -36,7 +36,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
       - uses: arduino/setup-protoc@v3
         if: runner.os == 'Linux'
-      - run: brew install secp256k1 libsodium lz4 protobuf autoconf
+      - run: brew install secp256k1 libsodium lz4 protobuf autoconf automake
         if: runner.os == 'macOS'
       - uses: mozilla-actions/sccache-action@v0.0.6
       - run: cargo test --no-fail-fast --features "${{ matrix.features }}"
