--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,3 +52,21 @@ metrics = "0.24.2"
 reqwest = { version = "0.12.9", features = ["rustls-tls", "hickory-dns"], default-features = false }
 hickory-resolver = { version = "0.24.4", features = ["tokio-runtime"] }
 tokio-retry = "0.3"
+nom = "8.0.0"
+crc32fast = "1.4.2"
+either = "1.13"
+derive-new = "0.7.0"
+metrics-exporter-prometheus = { version = "0.16.2", features = ["http-listener"], default-features = false }
+quote = "1.0"
+syn = "2.0.101"
+prettyplease = "0.2.29"
+convert_case = "0.7.1"
+crc = "3.2.1"
+libc = "0.2"
+cmake = "0.1"
+pkg-config = "0.3"
+walkdir = "2.5"
+sha2 = "0.10.8"
+aes = "0.8.4"
+ctr = "0.9.2"
+ed25519-dalek = { version = "2.1.1", features = ["rand_core", "hazmat"] }
