--- a/adnl-tcp/Cargo.toml
+++ b/adnl-tcp/Cargo.toml
@@ -14,15 +14,15 @@ futures = { workspace = true }
 pin-project = { workspace = true }
 bytes = { workspace = true }
 thiserror = { workspace = true }
-sha2 = "0.10.8"
-hex = "0.4.3"
-aes = "0.8.4"
-ctr = "0.9.2"
-ed25519-dalek = { version = "2.1.1", features = ["rand_core", "hazmat"] }
+sha2 = { workspace = true }
+hex = { workspace = true }
+aes = { workspace = true }
+ctr = { workspace = true }
+ed25519-dalek = { workspace = true, features = ["rand_core", "hazmat"] }
 
 [dev-dependencies]
 base64 = { workspace = true }
-tracing-test = "0.2.5"
+tracing-test = { workspace = true }
 
 [features]
 default = ["client", "server"]
