--- a/ton-grpc/Cargo.toml
+++ b/ton-grpc/Cargo.toml
@@ -27,9 +27,9 @@ prost = { workspace = true }
 url = { workspace = true }
 clap = { workspace = true }
 humantime = { workspace = true }
-either = "1.13"
-derive-new = "0.7.0"
-metrics-exporter-prometheus = { version = "0.16.2", features = ["http-listener"], default-features = false }
+either = { workspace = true }
+derive-new = { workspace = true }
+metrics-exporter-prometheus = { workspace = true, features = ["http-listener"], default-features = false }
 
 [dev-dependencies]
 tracing-test = { workspace = true }
