--- a/ton-liteserver-client/Cargo.toml
+++ b/ton-liteserver-client/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 [build-dependencies]
 tl_parser = { path = "../tl_parser" }
 anyhow = { workspace = true }
-quote = "1.0"
-syn = "2.0.101"
-prettyplease = "0.2.29"
-convert_case = "0.7.1"
+quote = { workspace = true }
+syn = { workspace = true }
+prettyplease = { workspace = true }
+convert_case = { workspace = true }
 
 [dependencies]
 adnl-tcp = { path = "../adnl-tcp", features = ["client"] }
@@ -28,13 +28,13 @@ futures = { workspace = true }
 tokio-stream = { workspace = true }
 dashmap = { workspace = true }
 tokio-retry = { workspace = true }
-url = "2.5.4"
+url = { workspace = true }
 
 [dev-dependencies]
 hex = { workspace = true }
 base64 = { workspace = true }
-tracing-test = "0.2.5"
-tracing-subscriber = "0.3.19"
+tracing-test = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 [features]
 testnet = []
