--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -33,8 +33,8 @@ hickory-resolver = { workspace = true }
 itertools = { workspace = true }
 metrics = { workspace = true }
 tokio-retry = { workspace = true }
-derive-new = "0.7.0"
-crc = "3.2.1"
+derive-new = { workspace = true }
+crc = { workspace = true }
 
 [dev-dependencies]
 tracing-test = { workspace = true }
@@ -42,10 +42,10 @@ tracing-test = { workspace = true }
 [build-dependencies]
 tl_parser = { path = "../tl_parser" }
 anyhow = { workspace = true }
-quote = "1.0"
-syn = "2.0.101"
-prettyplease = "0.2.29"
-convert_case = "0.7.1"
+quote = { workspace = true }
+syn = { workspace = true }
+prettyplease = { workspace = true }
+convert_case = { workspace = true }
 
 [features]
 testnet = ["tonlibjson-sys/testnet"]
