--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,10 +31,10 @@ tracing-test = "0.2.5"
 async-stream = "0.3.6"
 toner = "0.3.4"
 num-bigint = "0.4"
-tonic = { version = "0.12.3", features = ["gzip"] }
-tonic-reflection = "0.12.3"
-tonic-health = "0.12.3"
-tonic-build = "0.12.3"
+tonic = { version = "0.13.0", features = ["gzip"] }
+tonic-reflection = "0.13.0"
+tonic-health = "0.13.0"
+tonic-build = "0.13.0"
 prost = "0.13.5"
 quick_cache = "0.6.10"
 url = { version = "2.5.4", features = ["serde"] }
@@ -44,23 +44,23 @@ uuid = { version = "1.14", features = ["v4", "fast-rng", "serde"] }
 dashmap = "6.1.0"
 pin-project = "1.1"
 rand = "0.8"
-bytes = "1.9"
+bytes = "1.10.1"
 thiserror = "2.0.11"
 itertools = "0.14.0"
 bitvec = "1.0.1"
 metrics = "0.24.2"
 reqwest = { version = "0.12.9", features = ["rustls-tls", "hickory-dns"], default-features = false }
-hickory-resolver = { version = "0.24.4", features = ["tokio-runtime"] }
+hickory-resolver = { version = "0.25.1" }
 tokio-retry = "0.3"
 nom = "8.0.0"
 crc32fast = "1.4.2"
 either = "1.13"
 derive-new = "0.7.0"
-metrics-exporter-prometheus = { version = "0.16.2", features = ["http-listener"], default-features = false }
+metrics-exporter-prometheus = { version = "0.17.0", features = ["http-listener"], default-features = false }
 quote = "1.0"
 syn = "2.0.101"
 prettyplease = "0.2.29"
-convert_case = "0.7.1"
+convert_case = "0.8.0"
 crc = "3.2.1"
 libc = "0.2"
 cmake = "0.1"
