--- a/ton-client-util/Cargo.toml
+++ b/ton-client-util/Cargo.toml
@@ -19,5 +19,5 @@ anyhow = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 reqwest = { workspace = true }
-hickory-resolver = { workspace = true }
+hickory-resolver = { workspace = true, features = ["tokio"] }
 tokio-stream = { workspace = true }
